# supportops-openenv

./: .env.example  .gitignore  Dockerfile  README.md  app.py  app.py.py  env.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt  results.json
app/: app.py  baseline.py  env.py  graders.py  models.py  server.py  tasks.py  utils.py
data/: emails_easy.json  emails_hard.json  emails_medium.json
details/: links.txt
graders/: action_grader.py  categorization_grader.py  grader_base.py
server/: app.py
tests/: test_env.py
