[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "email-triage-openenv"
version = "0.1.0"
description = "A real-world OpenEnv environment for AI email triage and inbox management."
authors = [
    { name = "Jainam Pandit" }
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "flask>=3.0.0",
    "openai>=1.30.0",
    "python-dotenv>=1.0.1",
    "pydantic>=2.7.0",
    "numpy>=1.26.0",
    "openenv-core>=0.2.0"
]

[project.scripts]
server = "server.app:main"

[tool.setuptools]
py-modules = ["env", "inference", "app"]

[tool.setuptools.packages.find]
where = ["."]
include = ["tasks*", "graders*", "server*"]
